--- a/WPFTimeManager/packages.config
+++ b/WPFTimeManager/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NDde" version="2.01.0563" targetFramework="net40" />
   <package id="NLog" version="4.2.3" targetFramework="net40" />
+  <package id="System.Windows.Controls.DataVisualization.Toolkit" version="4.0.0.0" targetFramework="net40" />
+  <package id="Unofficial.Ionic.Zip" version="1.9.1.8" targetFramework="net40" />
+  <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net40" />
 </packages>
